# agentic-ai-solution

./: .gitignore  DOCUMENTATION_MAP.md  EXAMPLE_PROMPTS_COMPLETE.md  EXAMPLE_PROMPTS_GUIDE.md  EXAMPLE_PROMPTS_INDEX.md  EXAMPLE_PROMPTS_SUMMARY.md  QUICK_REFERENCE.md  QUICK_TEST_GUIDE.md  README.md  UI_BACKEND_INTEGRATION.md  UI_VISUAL_GUIDE.md  e2e-test.ps1
agentic-ai-solution-backend/: .env.example  .gitignore  CHANGELOG.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  LLM_PROVIDERS.md  QUICK_START.md  README.md  README_MULTILM.md  agents.py  chat_storage.py  config.py  langgraph_agents.py  log_streamer.py  main.py  mcp_client.py  models.py  orchestrator.py  pyproject.toml
agentic-ai-solution-mcp/: COMPLETION_REPORT.md  INDEX.md  MCP_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.txt  STATUS.md  TOOLS_REFERENCE.md  api_client.py  main.py  pyproject.toml
agentic-ai-solution-mock-api/: .gitignore  MOCK_DATA.md  README.md  main.py  pyproject.toml
agentic-ai-solution-mock-api/app/: models.py
agentic-ai-solution-mock-api/app/routes/: document_service.py  infrastructure_service.py  inquiry_service.py
agentic-ai-solution-mock-api/app/services/: document_service.py  infrastructure_service.py  inquiry_service.py
agentic-ai-solution-mock-api/mockdata/: epayment01.json  epayment02.json  epayment03.json  epaymenttxn01.json  epaymenttxn02.json  epaymenttxn03.json
agentic-ai-solution-mock-api/tests/: test_services.py
agentic-ai-solution-ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
agentic-ai-solution-ui/src/: App.jsx  index.css  main.jsx
agentic-ai-solution-ui/src/components/: ConversationUI.jsx  ExamplePrompts.jsx  Header.jsx  InputArea.jsx  LogViewer.jsx  LoginPage.jsx  MFAPage.jsx  MessageBubble.jsx  ProtectedRoute.jsx  Sidebar.jsx
agentic-ai-solution-ui/src/context/: AuthContext.jsx
agentic-ai-solution-ui/src/services/: api.js
