[tool.poetry]
name = "agentic-ai-solution-backend"
version = "0.2.0"
description = "LangGraph-based agentic backend with Vertex AI and MCP tools"
authors = ["Development Team <dev@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.7.0"
httpx = "^0.28.1"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"

# MCP Client
mcp = "^1.0.0"

# LangGraph and LangChain
langgraph = "^0.2.0"
langchain-core = "^0.3.0"

# Primary LLM - Google Vertex AI
langchain-google-vertexai = "^2.0.0"
google-cloud-aiplatform = "^1.50.0"

# Optional LLM providers
langchain-anthropic = { version = "^0.2.0", optional = true }
langchain-google-genai = { version = "^2.0.0", optional = true }
langchain-openai = { version = "^0.2.0", optional = true }

[tool.poetry.extras]
anthropic = ["langchain-anthropic"]
google = ["langchain-google-genai"]
openai = ["langchain-openai"]
all-llms = ["langchain-anthropic", "langchain-google-genai", "langchain-openai"]

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
