[tool.poetry]
name = "agentic-ai-solution-mcp"
version = "0.2.0"
description = "MCP Server for Payment and Transaction Inquiry Services"
authors = ["Development Team <dev@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastmcp = "^2.3.4"
httpx = "^0.28.1"
pydantic = "^2.7.0"
fastapi = "^0.115.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
