[tool.poetry]
name = "agentic-ai-solution-mock-api"
version = "0.1.0"
description = "Mock API services for Agentic AI Solution"
authors = ["Development Team <dev@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.7.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.2"
black = "^24.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.poetry.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
